@@ -1,6 +1,11 @@
 2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
 	* Tomboy/Addins/Bugzilla/BugzillaNoteAddin.cs: Removing extraneous debug
+	  statements.
+
+2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
+	* Tomboy/Addins/Bugzilla/BugzillaNoteAddin.cs: Removing extraneous debug
 	  statement.
 
 2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 
